--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,5 @@
-text.menu.signin=Start Session
-text.menu.signout=Close Session
+text.menu.signin=Sign In
+text.menu.signout=Sign Out
 
 text.driver.login.nombre=User:
 text.driver.login.roles=Roles:  
@@ -59,5 +59,5 @@ tooltip.customers.list.delete = Click to Delete the current Customer
 #
 # Signin form
 #
-input.username.placeholder = User (Use admin or user)
-input.password.placeholder = Password (Use 123 for both cases)
+input.username.placeholder = Enter the user
+input.password.placeholder = Enter the password
